src_old/objects/Question__c.object
<CustomObject>
    <description>Question stores all of the questions stored in the system and defines the type of question (e.g. Date, Text, Y/N) and if the question is related to targets. Question is related to Question Defined Response, Question Variant.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefinedResponseCount__c</fullName>
        <label>Defined Response Count</label>
        <summaryForeignKey>QuestionDefinedResponse__c.Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExceptionQuestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQuestionVisibleToClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Question Visible To Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemQuestion__c</fullName>
        <formula>AND(TEXT(TargetType__c) != null, TEXT(TargetType__c) != &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneHubQuestionId__c</fullName>
        <externalId>true</externalId>
        <label>One Hub Question Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuestionHint__c</fullName>
        <description>Question Hint</description>
        <label>Question Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Multi-Select List</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Single-Select List</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Yes/No</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Barcode</fullName>
                </value>
                <value>
                    <fullName>Multi Select Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReplaceByOneHubQuestionId__c</fullName>
        <label>Replace By One Hub Question ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetType__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuestionText__c</columns>
        <columns>QuestionType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>